Fix a few formatting issues

--- a/versions/v1.7.md
+++ b/versions/v1.7.md
@@ -31,7 +31,7 @@ permalink: /versions/v1.7/
      * [Integration with other models](#integration-with-other-models)
      * [Subregional policies](#subregional-policies)
 
-<!-- Added by: caleb, at: Wed Aug  4 14:17:59 PDT 2021 -->
+<!-- Added by: caleb, at: Wed Aug  4 15:53:08 PDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -191,7 +191,7 @@ Roadmap’s default data on the energy intensities of new vehicles are derived f
 
 Energy intensities for each of the powertrain types are derived from the “Default AFV MPGGE (MPDGE) Relative Ratio” values found in the Argonne National Laboratory [AFLEET Tool 2020](https://greet.es.anl.gov/afleet_tool). In order to match the more aggregated vehicle types in the Roadmap model, the vehicle types given in the AFLEET Tool are weighted in their respective Roadmap equivalents using their vehicle miles traveled. These weights are subsequently used to calculate the aggregated ratio for Roadmap vehicle types. The final energy intensity values for alternative powertrain types (everything but ICE Gasoline and ICE Diesel) are calculated using the ratio to the ICE value that is predominant for that vehicle type. This is ICE Gasoline for PC and MC and ICE Diesel for all other vehicle types. The equation below represents the calculation, where \\(\lbrack w\_{1},\ \ldots,\ w\_{n}\rbrack\\) represents all the weights of AFLEET vehicle types that compose a Roadmap vehicle type.
 
-$$EI_{\text{alternative}} = \left( \sum_{i = w_{1}}^{w_{n}}\frac{i}{\text{AFLEET\ Ratio}} \right) \times EI_{\text{ICE}}$$
+$$EI_{\text{alternative}} = \left( \sum_{i = w_{1}}^{w_{n}}\frac{i}{\text{AFLEET Ratio}} \right) \times EI_{\text{ICE}}$$
 
 Users can adjust these energy intensity ratios for any combination of countries, vehicle types, and model years.
 
@@ -242,7 +242,7 @@ Roadmap includes estimates of the shares of high-emitting vehicles for eight cou
 
 As tampering, malfunction, and poor maintenance affect emissions based on the vehicle’s age, we follow EMFAC and MOVES’s approach to estimate high emitters’ emission deterioration. As shown in the figure below, this approach models a linear increase in emission rates from the end of the warranty period (the first dashed line) up to the defined useful life age (the second dashed line). Once the useful life age is reached, we assume a constant emission rate equal to the product of the emissions multiplier and the baseline emission factor. Roadmap derives both the warranty age and the useful life age from region-specific regulations and vehicle activity.
 
-Mileage was converted to age based on region-specific data that show how quickly different types of vehicles accumulate miles. We use TRACCS data for the EU and activity data from VECC for China, which is also consistent with the estimate from Huo et al. [Huo et al., 2012](https://doi.org/10.1016/j.enpol.2011.09.019)(). We use the same ages for the US as in MOVES. In addition, we distinguish warranty and useful life ages by control level. For example, China only starts to have warranty requirements in China VI, and more recent standards, for example, China VI, Euro VI and US2004+, require a longer useful life than earlier standards.
+Mileage was converted to age based on region-specific data that show how quickly different types of vehicles accumulate miles. We use TRACCS data for the EU and activity data from VECC for China, which is also consistent with the estimate from Huo et al. ([Huo et al., 2012](https://www.sciencedirect.com/science/article/abs/pii/S0301421511007087?via%3Dihub)). We use the same ages for the US as in MOVES. In addition, we distinguish warranty and useful life ages by control level. For example, China only starts to have warranty requirements in China VI, and more recent standards, for example, China VI, Euro VI and US2004+, require a longer useful life than earlier standards.
 
 ![](/roadmap-doc/assets/high_ems_age_effects.svg)
 
@@ -297,8 +297,6 @@ Roadmap can also optionally model the impact of biodiesel blends on tank-to-whee
 ### Well-to-wheel GHG emissions of biofuels
 
 The feedstock shares for regions in which this level of detail is provided are used to calculate an aggregate for the emissions in that region. Currently, detailed biofuel feedstock data are not available for every country, but a global default is used as an estimate. This default is calculated based on the share of production of various biofuels in the countries for which we have data. Biofuels are typically blended into a primary fuel type such as gasoline or diesel and as such, they will have a proportionate effect on total emissions based on this blend share. The remaining calculation of GHG emissions is derived from the other fuel in the blend. GHG emissions at the feedstock level may be optionally output by the model for countries in which the detail is provided.
-
-### 
 
 ### GHG emissions
 
