Some minor changes to the 1.7 documentation

--- a/versions/v1.7.md
+++ b/versions/v1.7.md
@@ -31,7 +31,7 @@ permalink: /versions/v1.7/
      * [Integration with other models](#integration-with-other-models)
      * [Subregional policies](#subregional-policies)
 
-<!-- Added by: caleb, at: Wed Aug  4 15:53:08 PDT 2021 -->
+<!-- Added by: caleb, at: Thu Aug  5 15:00:37 PDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -300,7 +300,7 @@ The feedstock shares for regions in which this level of detail is provided are u
 
 ### GHG emissions
 
-Roadmap reports emissions for three GHGs (CO<sub>2</sub>, CH<sub>4</sub>, and N<sub>2</sub>O) as well as climate forcers BC, OC, and sulfate aerosols. By default, the model calculates tank-to-wheel (TTW), well-to-tank (WTT), and well-to-wheel (WTW) GHG emissions. Unlike other pollutants which depend on vehicle emission control technologies, CO<sub>2</sub> emissions are calculated based on energy consumption and fuel carbon intensity. GHG emissions are taken from a comprehensive ICCT [life-cycle assessment](https://theicct.org/publications/global-LCA-passenger-cars-Jul2021) which includes emissions from fuel extraction, refining, operation, and disposal (Bieker, 2021). They are reported on a 20-year and 100-year horizon, using the following GWP values (AR5 WG1 Chapter 8 Supplemental (8SM) Table 8.SM.17):
+Roadmap reports emissions for three GHGs (CO<sub>2</sub>, CH<sub>4</sub>, and N<sub>2</sub>O) as well as climate forcers BC, OC, and sulfate aerosols. By default, the model calculates tank-to-wheel (TTW), well-to-tank (WTT), and well-to-wheel (WTW) GHG emissions. Unlike other pollutants which depend on vehicle emission control technologies, CO<sub>2</sub> emissions are calculated based on energy consumption and fuel carbon intensity. Fuel GHG emission intensities are taken from a comprehensive ICCT [life-cycle assessment](https://theicct.org/publications/global-LCA-passenger-cars-Jul2021) which includes emissions from fuel extraction, refining, operation, and disposal (Bieker, 2021). They are reported on a 20-year and 100-year horizon, using the following GWP values (AR5 WG1 Chapter 8 Supplemental (8SM) Table 8.SM.17):
 
 | Pollutant      | GWP20   | GWP100 |
 | -------------- | ------- | ------ |
@@ -313,7 +313,7 @@ Roadmap reports emissions for three GHGs (CO<sub>2</sub>, CH<sub>4</sub>, and N<
 
 While combustion (TTW) emissions are typically globally consistent, upstream (WTT) emissions can vary significantly depending on the regional production processes. Roadmap considers the emission intensities of the feedstocks for biodiesel, biogas, ethanol, and hydrogen. The relative blend levels of biodiesel, biogas, and ethanol in diesel, CNG, and gasoline respectively are informed for a few countries by national biofuel blend targets. For other regions, the biofuel blend shares are calculated as the ratio of bio- to fossil-fuel consumption reported in the World Energy Balances.
 
-Base year global inputs for the GHG intensity of electricity generation are sourced from [IPCC 2011](https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf). These are combined with the projected share of electricity generation by type from IEA’s World Energy Outlook (WEO) 2020 STEPS scenario for the USA, China, India, Japan, and the EU to obtain a final aggregate CO<sub>2</sub> emission value for generation. This also allows for other scenarios of generation shares to be specified by the user. The emission intensity for electricity generation in other regions is based on the same scenario, but instead uses only the aggregated value.
+Base year global inputs for the GHG intensity of electricity generation by power plant type are sourced from [IPCC 2011](https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf). These are combined with the projected share of electricity generation by type from IEA’s World Energy Outlook (WEO) 2020 STEPS scenario for the USA, China, India, Japan, and the EU to obtain default aggregate CO<sub>2</sub> emission intensity values for electricity generation. This also allows for other scenarios of generation shares (grid mix) to be specified by the user. The emission intensity for electricity generation in other regions is based on the same scenario, but instead uses only the aggregated value.
 
 ## Policies and scenarios
 The Roadmap model is designed to explore the implications of national and regional policies. Users can provide inputs defining alternate scenario pathways or updating baseline assumptions.
