Updating from v1.8.0 to v1.8.2

--- a/versions/v1.8.md
+++ b/versions/v1.8.md
@@ -13,6 +13,7 @@ permalink: /versions/v1.8/
   * [Stock turnover](#stock-turnover)
      * [From-age-zero turnover](#from-age-zero-turnover)
      * [Year-over-year turnover](#year-over-year-turnover)
+     * [Major Markets](#major-markets)
   * [Mileage](#mileage)
      * [Mileage degradation](#mileage-degradation)
      * [Scrappage policies](#scrappage-policies)
@@ -33,7 +34,7 @@ permalink: /versions/v1.8/
      * [Vehicle segmentation](#vehicle-segmentation)
      * [Combining Subregions and Segments](#combining-subregions-and-segments)
 
-<!-- Added by: caleb, at: Wed Sep  1 13:41:06 EDT 2021 -->
+<!-- Added by: erikpronk, at: Fri Sep 24 15:38:33 PDT 2021 -->
 
 <!--te-->
 ## Introduction
@@ -75,17 +76,19 @@ For countries within aggregate MoMo regions, new vehicle sales are disaggregated
 
 Note that the World Energy Balances (WEB) lack data on LNG and Hydrogen and as such, the total sales are assumed to be 0 unless otherwise specified by an alternative data source. LNG and CNG are grouped into a single category in WEB, while the MoMo data only include CNG. Therefore, no ICE LNG specific vehicle sales or stock are present in the model at the time of writing, so this does not pose an issue. For hydrogen, historical and projected sales of FCEVs are specified independently of the World Energy Balances.
 
-Historical sales for several countries are updated using country-specific data sourced from [MOVES](https://www.epa.gov/moves/latest-version-motor-vehicle-emission-simulator-moves) (United States), [IHS](https://ihsmarkit.com/products/commercial-vehicle-insight-intelligence.html) HDV sales from 2020, ICCT’s [India Emissions Model](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) ([BAU](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) scenario), [EV Volumes](https://www.ev-volumes.com/) (LDV only), IHS HDV (pre-2020; EU HDV), and ICCT’s [Pocketbook](https://theicct.org/series/eu-vehicle-market-statistical-pocketbook) (EU LDV). The Pocketbook and IHS HDV sales data prior to 2020 are used only to calculate the share of sales by powertrain and not to overwrite the sales totals. Default model inputs are derived from these data sources with the highest priority data listed first:
+Historical sales for several countries are updated using country-specific data sourced from [MOVES3](https://www.epa.gov/moves/latest-version-motor-vehicle-emission-simulator-moves) (United States), [IHS](https://ihsmarkit.com/products/commercial-vehicle-insight-intelligence.html) (2020 HDV sales for multiple countries and more calendar years for the EU), ICCT’s [India Emissions Model](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) [BAU](https://theicct.org/sites/default/files/publications/ICCT_IndiaRetrospective_2013.pdf) scenario, [EV Volumes](https://www.ev-volumes.com/) (LDV sales for multiple countries), and ICCT’s [Pocketbook](https://theicct.org/series/eu-vehicle-market-statistical-pocketbook) (LDV data for the EU). China historical stock and sales are based on multiple sources including [CAAM](http://www.caam.org.cn/chn/4/cate_39/list_1.html), CATARC, ZEDATA, VECC, and EV100. The Pocketbook and IHS HDV sales data prior to 2020 are used only to calculate the share of sales by powertrain and not to overwrite the sales totals. Default model inputs are derived from these data sources with the highest priority data listed first:
 
-  - MOVES for the United States;
+  - MOVES3 for the United States total sales;
 
-  - IHS HDV data for 2020 takes priority over all HDV data in applicable countries for that year except for MOVES;
+  - CAAM, CATARC, ZEDATA, VECC, and EV100 for China total sales and shares by powertrain;
+
+  - IHS 2020 HDV total sales;
 
   - EU HDV (IHS) and LDV (Pocketbook) data used for the sales shares by powertrain;
 
-  - EU sales totals are derived from [ACEA](https://www.acea.auto/reliable-data-statistics/) data;
+  - EU HDV and LDV sales totals are derived from [ACEA](https://www.acea.auto/reliable-data-statistics/) data;
 
-  - India Emissions Model for the rest of the India data not already covered;
+  - India Emissions Model for India sales data not already covered;
 
   - EV Volumes fills out total sales gaps for available countries in its dataset not already covered;
 
@@ -93,7 +96,7 @@ Historical sales for several countries are updated using country-specific data s
 
 ### Projected sales
 
-Sales are projected using compound annual growth rates (CAGRs) which have been calibrated based on projected vehicle activity growth rates. For EU countries, activity growth rates are calibrated to the EEA’s 2018 and 2019 CO<sub>2</sub> emissions under the assumption that the relation is relatively comparable to activity. For the USA, the EPA’s GHG inventory is used to match TTW CO2 emissions data in 2005 and between 2014 and 2018 (the intermediate years are interpolated). For both the EU and USA, the final growth rate is forward filled for projected years. For the rest of the world, growth rates are derived from MoMo’s freight and passenger activity projections under the IEA’s Stated Policy Scenario ([STEPS](https://www.iea.org/reports/energy-technology-perspectives-2020/etp-model)) from 2020. The following equation is used to project sales for each country (\\(C\\)) and vehicle type (\\(V)\\):
+Sales are projected using compound annual growth rates (CAGRs) which have been calibrated based on projected vehicle activity growth rates. For EU countries, sales growth rates are calibrated such that modeled activity growth matches the EU Reference Scenario 2020’s projected change in passenger transport activity and freight demand. For the USA, MOVES3 projected sales are used for the full range out to 2050 and similarly for India, the projected sales from the IEM BAU scenario are used. For the EU, the final growth rate is applied for all projected years. For the rest of the world, growth rates are derived by calibrating long-term sales growth rates to align model estimates of activity growth with MoMo’s freight and passenger activity projections under the IEA’s Stated Policy Scenario ([STEPS](https://www.iea.org/reports/energy-technology-perspectives-2020/etp-model)) from 2020. The following equation is used to project sales for each country (\\(C\\)) and vehicle type (\\(V)\\):
 
 $$\text{Sales}_{C,\ V,y2} = \text{Sales}_{C,V,y1}\  \times \left( \ 1 + \text{CAGR}_{C,V,G} \right)^{y2 - y1}$$
 
@@ -138,7 +141,7 @@ See the emission standards section for more details on determining the age of us
 Because vehicle imports are highly variable year to year, by default the model assumes that the future ratio of used imports to new vehicle sales is an average of the 5 most recent years of data. This share is assumed to remain constant for all projected years; however, users may provide alternate shares to replace the default assumptions.
 
 ## Stock turnover
-Roadmap keeps track of the age distribution of the fleet at every timestep based on new vehicle sales, the import age of used vehicles, and region- and vehicle-specific retirement rates. There are two methods used to estimate stock turnover: one is based on the fraction of vehicles surviving from the original sales year, and the other is based on the fraction of vehicles surviving from one year to the next.
+Roadmap keeps track of the age distribution of the fleet at every timestep based on new vehicle sales, the import age of used vehicles, and region- and vehicle-specific retirement rates. There are two methods used to estimate stock turnover: one is based on the fraction of vehicles surviving from the original sales year, and the other is based on the fraction of vehicles surviving from one year to the next. Detailed baseline stock by age is provided for four major markets: EU, USA, China, and India.
 
 ### From-age-zero turnover
 
@@ -175,6 +178,10 @@ $$\text{Stock}_{CY,\ MY} = \ \text{Sales}_{\text{MY}}\  \times \ \text{Survival}
 
 The year-over-year curves are applied by default to EU countries for new sales as well as used vehicle imports. This method is applied in order to accommodate detailed inputs on the starting age distribution of the vehicle stock and to model intra-EU vehicle trade.
 
+### Major Markets
+
+The EU, USA, and India each have baseline stock by age and survival curves for stock turnover. China, on the other hand, has input stock by age *and* powertrain. Survival curves for China are calculated based on the average retirement age for each vehicle type. The EU data are derived from ACEA for PC and LCV in 2019 and from [ACEM](https://www.acem.eu/market-data) for MC in 2018. For HDVs (MDT, HDT, Bus), 2018 data are from an internal compilation of stock data from ACEA that is disaggregated by age using sales data from the IHS and IEA’s Mobility Model. For the USA, the stock by age and survival curves data come from MOVES3 and for India, the same data are from IEM. Lastly, the China stock by age and powertrain is derived from an internal meta analysis of data from CAAM and CATARC.
+
 ## Mileage
 Total vehicle-kilometers traveled (VKT) is calculated by multiplying the number of vehicles in the stock by the average annual mileage, based on the vehicle type and country. Historical per-vehicle mileages are input and calibrated to align model estimates of energy consumption with historical energy balances. Unless otherwise specified, annual mileages are assumed to remain constant in future years.
 
@@ -189,7 +196,7 @@ Roadmap can also model the impacts of policies that are designed to shift activi
 This module takes as an input the percent of VKT for each specified vehicle population (based on any of age, standard, vehicle type, fuel type) that should be reassigned to newer vehicles. Users can also specify the fuel type and model year of the vehicles that receive the shifted activity.
 
 ## Vehicle efficiency
-Roadmap’s default data on the energy intensities of new vehicles are derived from a combination of country-specific data sources, ICCT analyses, and historical data from the MoMo database. Vehicle- and powertrain-specific energy intensities by model year are sales-weighted and adjusted to reflect differences between on-road performance and test cycle values. In countries that are not covered individually by available data sources or analysis, default energy intensities are based on the matching aggregate region in the MoMo database.
+Roadmap’s default data on the energy intensities of new vehicles are derived from a combination of country-specific data sources, ICCT analyses, and historical data from the MoMo database. Vehicle- and powertrain-specific energy intensities by model year are sales-weighted and adjusted to reflect differences between on-road performance and test cycle values. USA energy intensity data are based on detailed energy consumption and vehicle mileage data from MOVES3. In countries that are not covered individually by available data sources or analysis, default energy intensities are based on the matching aggregate region in the MoMo database.
 
 Energy intensities for each of the powertrain types are derived from the “Default AFV MPGGE (MPDGE) Relative Ratio” values found in the Argonne National Laboratory [AFLEET Tool 2020](https://greet.es.anl.gov/afleet_tool). In order to match the more aggregated vehicle types in the Roadmap model, the vehicle types given in the AFLEET Tool are weighted in their respective Roadmap equivalents using their vehicle miles traveled. These weights are subsequently used to calculate the aggregated ratio for Roadmap vehicle types. The final energy intensity values for alternative powertrain types (everything but ICE Gasoline and ICE Diesel) are calculated using the ratio to the ICE value that is predominant for that vehicle type. This is ICE Gasoline for PC and MC and ICE Diesel for all other vehicle types. The equation below represents the calculation, where \\(\lbrack w\_{1},\ \ldots,\ w\_{n}\rbrack\\) represents all the weights of AFLEET vehicle types that compose a Roadmap vehicle type.
 
@@ -371,6 +378,8 @@ Vehicle segmentation inputs are very similar to subregional inputs, described ab
 | USA | Bus     | Coach   |
 
 With detailed vehicle segments, it is highly recommended to provide scenario inputs for key characteristics of each segment. Many segments are typically defined by gross vehicle weight or activity patterns which make it unrealistic to assume variables like energy intensity and mileage would be the same as the broader vehicle category. All supported scenario inputs can be specified at the segment level.
+
+The Roadmap model data pipeline also provides the option to output MOVES3 model inputs by vehicle segment. In this case, the user must define their configuration to utilize these data.
 
 ### Combining Subregions and Segments
 
